--- a/SatelliteTec/SatelliteTec/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,24 +1,30 @@
 ﻿@model SatelliteTec.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
-
+<!--
 <h4>Utilice otro servicio para iniciar sesión.</h4>
-<hr />
+<hr /> -->
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
+    if (loginProviders.Count() == 0)
+    {
         <div>
-            <p>
+            <img style="display: block;  margin-left: auto; margin-right: auto; width: 80%; " src="https://cdn3.iconfinder.com/data/icons/office-flat-8/32/Key-512.png" />
+            <!--<p>
+
                 No existen servicios de autenticación externos configurados. Consulte <a href="https://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
                 para obtener información sobre cómo configurar esta aplicación ASP.NET para admitir el inicio de sesión a través de servicios externos.
-            </p>
+            </p>-->
         </div>
     }
-    else {
-        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
+    else
+    {
+        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }))
+        {
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
                         <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Inicie sesión con su cuenta @p.Caption">@p.AuthenticationType</button>
                     }
                 </p>
