--- a/SatelliteTec/SatelliteTec/Views/Account/Login.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="card" style="margin-top: 50px">
-    <h2 class="card-header">@ViewBag.Title</h2>
+    <h2 class="card-header" style="color: white; background-color: rgb(0, 123, 255) !important;">@ViewBag.Title</h2>
     <div class="card-body">
 
         <div class="row">
