--- a/SatelliteTec/SatelliteTec/Views/Suppliers/Delete.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Suppliers/Delete.cshtml
@@ -1,48 +1,66 @@
 ﻿@model SatelliteTec.Models.Supplier
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar Proveedor";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Supplier</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
+<div style="margin-top: 50px">
+    <div class="shadow p-3 mb-5 bg-white rounded">
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
+        <h2 style="text-align: center">@ViewBag.Title</h2>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
 
-    </dl>
+    <div class="card">
+        <h5 class="card-header">
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            <label style="cursor: pointer;" onclick="location.href='@Url.Action("Index", "Suppliers")'"><i class="far fa-hand-point-left fa-lg"></i> Regresar a la Lista</label>
+        </h5>
+        <div class="card-body">
+            <h5 class="card-title">¿Estás segura de que quieres eliminar esto?</h5>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Phone)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Phone)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+
+            </dl>
+
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <button type="submit" class="btn btn-danger"><i class="fas fa-trash fa-sm"></i> Eliminar</button>
+            }
+
+
         </div>
-    }
+    </div>
+
 </div>
