--- a/SatelliteTec/SatelliteTec/Views/Suppliers/Details.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Suppliers/Details.cshtml
@@ -1,42 +1,65 @@
 ﻿@model SatelliteTec.Models.Supplier
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles de Proveedor";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Supplier</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Phone)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
 
-    </dl>
+
+<div style="margin-top: 50px">
+    <div class="shadow p-3 mb-5 bg-white rounded">
+
+        <h2 style="text-align: center">@ViewBag.Title</h2>
+
+    </div>
+
+
+    <div class="card">
+        <h5 class="card-header">
+
+            <label style="cursor: pointer;" onclick="location.href='@Url.Action("Index", "Suppliers")'"><i class="far fa-hand-point-left fa-lg"></i> Regresar a la Lista</label>
+        </h5>
+        <div class="card-body">
+            <h5 class="card-title">Puede editar cualquier dato</h5>
+
+
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Phone)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Phone)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+
+            </dl>
+
+            <button onclick="location.href='@Url.Action("Edit", "Suppliers",  new { id = Model.Id })'" type="button" class="btn btn-dark"><i class="fas fa-file-alt fa-sm"></i> Editar</button>
+
+
+        </div>
+    </div>
+
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
