--- a/SatelliteTec/SatelliteTec/Views/Suppliers/Index.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Suppliers/Index.cshtml
@@ -1,45 +1,68 @@
 ﻿@model IEnumerable<SatelliteTec.Models.Supplier>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Inicio Proveedores";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+<div style="margin-top: 50px">
+    <div class="shadow p-3 mb-5 bg-white rounded">
 
-</table>
+        <h2 style="text-align: center">@ViewBag.Title</h2>
+
+    </div>
+
+
+    <div class="shadow p-3 mb-5 bg-white rounded">
+        <p>
+            <label title="click here"  style="cursor: pointer; color: #007bff" class="fas fa-plus-circle fa-lg" onclick="location.href='@Url.Action("Create", "Suppliers")'"> Crear Nuevo </label>
+        </p>
+
+
+        <table class="table">
+            <thead class="bg-primary" style="color: #ffffff">
+                <tr>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Phone)
+                    </th>
+                    <th scope="col">
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th scope="col" class="col-md-5">Acción</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Phone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+
+                        <td>
+                            <button onclick="location.href='@Url.Action("Edit", "Suppliers",  new { id = item.Id })'" type="button" class="btn btn-dark"><i class="fas fa-file-alt fa-sm"></i> Editar</button> |
+                            <button onclick="location.href='@Url.Action("Details", "Suppliers",  new { id = item.Id })'" type="button" class="btn btn-warning"><i class="fas fa-info-circle fa-sm"></i> Detalles</button> |
+                            <button onclick="location.href='@Url.Action("Delete", "Suppliers",  new { id = item.Id })'" type="button" class="btn btn-danger"><i class="fas fa-trash fa-sm"></i> Eliminar</button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+
+    </div>
+
+</div>
+
+
