--- a/SatelliteTec/SatelliteTec/Views/Suppliers/Create.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Suppliers/Create.cshtml
@@ -24,7 +24,7 @@
             <label style="cursor: pointer;" onclick="location.href='@Url.Action("Index", "Suppliers")'"><i class="far fa-hand-point-left fa-lg"></i> Regresar a la Lista</label>
         </h5>
         <div class="card-body">
-            <h5 class="card-title">Puede creear un Proveedor</h5>
+            <h5 class="card-title">Puede crear un Proveedor</h5>
 
 
 
