--- a/SatelliteTec/SatelliteTec/Views/Suppliers/Details.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Suppliers/Details.cshtml
@@ -26,7 +26,7 @@
             <label style="cursor: pointer;" onclick="location.href='@Url.Action("Index", "Suppliers")'"><i class="far fa-hand-point-left fa-lg"></i> Regresar a la Lista</label>
         </h5>
         <div class="card-body">
-            <h5 class="card-title">Puede editar cualquier dato</h5>
+            <h5 class="card-title">Puede ver cualquier dato</h5>
 
 
             <dl class="dl-horizontal">
