Admin asigment role

--- a/SatelliteTec/SatelliteTec/Views/Account/Register.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Account/Register.cshtml
@@ -30,8 +30,16 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="Roles">Rol</label>
+        <select class="form-control" id="Roles" name="Roles">
+            <option value="Technical">Tecnico</option>
+            <option value="Logistic">Logistica</option>
+            <option value="Almacenist">Almacenista</option>
+        </select>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrarse" />
+            <input type="submit" class="btn btn-primary" value="Registrarse" />
         </div>
     </div>
 }
