--- a/SatelliteTec/SatelliteTec/Views/Shared/_Layout.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Shared/_Layout.cshtml
@@ -24,10 +24,21 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="@Url.Action("Login","Account")">Home <span class="sr-only">(current)</span></a>
                 </li>
+                @if (User.IsInRole("Almacenist"))
+                {
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "Products")">Productos</a>
+                </li>}
+                @if (User.IsInRole("Technical"))
+                {
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "")">Contacto</a>
+                </li>}
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Contact","Home")">Contacto</a>
                 </li>
-    
+
+
             </ul>
  
                 @Html.Partial("_LoginPartial")
