--- a/SatelliteTec/SatelliteTec/Views/Manage/Index.cshtml
+++ b/SatelliteTec/SatelliteTec/Views/Manage/Index.cshtml
@@ -167,23 +167,24 @@
             Featured
         </div>
         <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Bienvenido!!!</h5>
+            <p class="card-text">Panel de control.</p>
 
 
             <div class="container">
                 <div class="row row-cols-3" style="padding: 10px">
                     <div class="col" style="padding: 10px">
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+
+                        <button type="button"  onclick="location.href='@Url.Action("Index", "Almacens")'"  class="btn btn-primary btn-lg btn-block">Almacen</button>
                     </div>
                     <div class="col" style="padding: 10px">
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                        <button type="button"  onclick="location.href='@Url.Action("Index", "Products")'" class="btn btn-primary btn-lg btn-block">Productos</button>
                     </div>
                     <div class="col" style="padding: 10px">
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                        <button type="button" onclick="location.href='@Url.Action("Index", "Suppliers")'"  class="btn btn-primary btn-lg btn-block">Proveedores</button>
                     </div>
                     <div class="col" style="padding: 10px">
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                        <button type="button" onclick="location.href='@Url.Action("Index", "Visits")'" class="btn btn-primary btn-lg btn-block">Visitas</button>
                     </div>
                 </div>
             </div>
@@ -193,7 +194,7 @@
 
         </div>
         <div class="card-footer text-muted" style="  ">
-            2 days ago
+            Satelites Tec
         </div>
     </div>
 
